# tattle_wx

./: .gitignore  CMakeLists.txt  README.md  tattle-config.cmake.in  tattle.sln  tattle.vcxproj  tattle.vcxproj.filters
cmake/: TattleUtil.cmake
schemas/: command.json
src/: app.cpp  command_line.cpp  info_dialog.cpp  key_store.cpp  key_store.h  prompt.cpp  prompt_reply.cpp  report.cpp  report_http.cpp  tattle.h  tattle_main.cpp  view_report.cpp
test/: config.json  config.txt  en-US.json  error_report.json  example_server_reply.json  log.txt  shared_config.json  tattle_data.json  tattle_log.txt
